--- a/README
+++ b/README
@@ -10,6 +10,9 @@ This is supervised clustering with integrated weighting of both GO semantic simi
 
 
 
+## Installation:
+library(devtools)
+install_github("tzhang-nmdp/Supervised-clustering-survival")
 
 ## Usage:
 
