--- a/README
+++ b/README
@@ -2,12 +2,11 @@ Supervised clustering survival
 =======================
 
 This is supervised clustering with integrated weighting of both GO semantic similarity and statistical association effect, and mine the mutational clusters with strong survival outcome stratifications. 
-![WGS_WORKFLOW](https://github.com/tzhang-nmdp/Supervised-clustering-survival/blob/master/***.png)
+![WGS_WORKFLOW](https://github.com/tzhang-nmdp/Supervised-clustering-survival/Example/workflow.png)
 
 
 ## Algorithm
-
-
+![WGS_WORKFLOW](https://github.com/tzhang-nmdp/Supervised-clustering-survival/Example/Pseudocode.png)
 
 ## Installation:
 
